# book-store

./: .env.dev  .flake8  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  render.yaml  render.yml  requirements.txt
.github/workflows/: build.yml  github-actions-demo.yml
core/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order.py  test_order_viewset.py  test_serializers.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/: test_categoty_viewset.py  test_models.py  test_product.py  test_product_viewset.py  test_serializers.py
product/viewsets/: category_viewset.py  product_viewset.py
